# projeto_rasppico

./: .gitignore  README.md  clean_both_sensors.py  clean_both_sensors2.py  dados0.xlsx  datapy.xlsx  docker-compose.yml  get_raw_data_pico.py  handle_sensors_module.py  ler_gps_pico.py  ler_gps_usb.py  ler_usb.py  read_both_raw_data_pico.py  save_raw_data_pc.py  save_raw_data_pc2.py  script-ngrok.py  simularrequest.py  start.sh  temp_leitura_hall.py  testarhall.py  testarhall2.py  teste_camera.py  teste_socket.py  threads_e_botao.py  threads_e_botao_e_hall.py  threads_funcionando.py
backend/: .env  .env.example  Dockerfile  Dockerfile.flask  app.py  index.js  package-lock.json  package.json  requirements.txt
backup_rpi4/: parece_funcionando.py
codigo_rasppi4/: handle_sensors_module.py  raw_reading_gps_100hz.py  sem_net.py  sem_post.py
codpython/: clean_data.txt  dados2.xlsx  dados_excel.xlsx  dados_excel2.csv  dados_excel2.xlsx  dados_excel33.xlsx  dados_excelreal.csv  dados_excelreal.xlsx  dados_excelreal2.xlsx  dadosloop550.txt  flaskteste.py  jy901_angulo.py  tessssss.py  teste.py  teste2.py  teste5.txt  testes.py  testes2222.py  wt901.py  wt901_cleandata.py  wt901_rawdata.py  ~$dados_excelreal2.xlsx
funcionando_sensores/: clean_both_sensors2.py  threads_e_botao_e_hall.py
rust-script/: Cargo.toml
rust-script/src/: main.rs
teste_variados/: clean_data.py  dados.xlsx  dados2.xlsx  leitura_ambos.py  leitura_angulo.py  leitura_sem_escrever.py  read_both_pico_THREADS.py  teste.py  teste_gps_pico.py  teste_threads.py
url/: Cargo.toml
url/src/: main.rs
(+30 files in other folders)
