[package]
name = "rust-script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
http = "1.1.0"
tokio = { version = "0.2.9", features = ["full"] }
serde_json = "1"
